--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum possimus architecto minima adipisci, officia harum eligendi dolores facilis recusandae delectus. Cum, beatae necessitatibus doloremque cumque laborum nesciunt odio quasi odit?</p>
 </header>
 
+<main>
+    <section>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas debitis fugiat perspiciatis quod reprehenderit quibusdam aspernatur et, cumque ut fugit accusamus qui vero officiis repellendus sequi natus assumenda dicta enim.</p>
+    </section>
+</main>
+
 
 </body>
 </html>
